[gd_scene load_steps=2 format=3 uid="uid://cf3vc1eeykw5a"]

[ext_resource type="Script" path="res://scripts/ui/animations/raffle_animation.gd" id="1_dplp2"]

[node name="RaffleAnimation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dplp2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.803922)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PrizeInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "正在抽取：奖项名称"
horizontal_alignment = 1

[node name="SpinnerContainer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsScrollContainer" type="ScrollContainer" parent="VBoxContainer/SpinnerContainer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -125.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="ItemsContainer" type="HBoxContainer" parent="VBoxContainer/SpinnerContainer/ItemsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Indicator" type="ColorRect" parent="VBoxContainer/SpinnerContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -130.0
offset_right = 5.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92549, 0.309804, 0.156863, 1)

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "关闭"

[node name="WinnerInfo" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -104.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
